--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,5 @@
             "Drupal\\Settings\\": "src/"
         }
     },
-    "bin": ["bin/settings_compile"]
+    "bin": ["bin/settings_compiler"]
 }
